traces/bug_631.txt
src/medit/stream.c:833: error: DEAD_STORE
  The value written to &norm (type double) is never used.
Showing all 1 steps of the trace


src/medit/stream.c:833:3: Write of unused value
831.     k = locateTetra(mesh,k,++mesh->mark,xp3,cb);
832.     if ( !k )  return(0);
833.     norm = field3DInterp(mesh,k,cb,v3);
         ^
834.     pt = &mesh->tetra[k];
835.     pt->cpt--;
